--- a/api/static/css/styles_dashboard.css
+++ b/api/static/css/styles_dashboard.css
@@ -1,62 +1,70 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #fff;
+* {
     margin: 0;
     padding: 0;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: var(--color-surface-100);
     overflow: hidden;
 }
-h1 {
-    font-family: "Aclonica", sans-serif;
-    text-align: center;
-    color: #333;
-    margin-bottom: 20px;
+
+header {
+    position: fixed;
+    z-index: 10000;
+    top: 0;
+    width: 100%;
+    background-color: rgba(0,0,0,0.8);
+}
+nav > ul{
+    display: flex;
+    color: white;
+    gap: 2rem;
+    list-style: none;
+    font-weight: bold;
+    justify-content: end;
+    padding: 1rem 2rem;
+    font-size: 1.5rem;
 }
 
-.indicators {
+nav > ul > li > a {
+    text-decoration: none;
+    color: white;
+    padding-bottom: 2px;
+}
+
+nav > ul > li > a:hover {
+    color: #ff6a00;
+    border-bottom: 2px solid #ff6a00;
+}
+
+.card {
     display: flex;
-    justify-content: space-around;
-    margin: 20px 0;
-    padding: 10px;
-    background-color: #fff;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 1rem 2rem;
     border-radius: 10px;
 }
 
-.indicator {
-    text-align: center;
-    background-color: #e6f7ff;
-    border: 1px solid #91d5ff;
-    border-radius: 10px;
-    padding: 10px;
-    width: 30%;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.indicator p {
-    margin: 0;
-    font-size: 1.2em;
-    color: #0078FF;
-}
-
-.visualization-container {
-    display: flex;
-    justify-content: space-between;
-    margin: 0;
+#metadata {
     padding: 20px;
-    background-color: #fff;
-    border-radius: 10px;
+    height: 90vh;
+    display: flex;
 }
 
-#map {
-    width: 48%;
-    height: 400px;
-    border-radius: 10px;
+.indicators-and-charts {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: 100%;
 }
 
-#pie-chart-container, #bar-chart-container {
-    width: 48%;
-    height: 400px;
-    border-radius: 10px;
-}
 #scroll-down-btn {
     position: fixed;
     bottom: 20px;
@@ -70,4 +78,5 @@ h1 {
 
 #scroll-down-btn i {
     font-size: 40px;
+    color: var(--color-primary-100);
 }
