--- a/api/templates/bag_of_words.html
+++ b/api/templates/bag_of_words.html
@@ -1,9 +1,14 @@
 {% macro bag_of_words_section() %}
-    <section id="bag-of-words">
-        <h2>Bag Of Words</h2>
-        <section class="charts-container">
-        <div id="word-cloud" class="chart"></div>
-        <div id="treemap" class="chart"></div>
-    </section>
-    </section>
+<section id="bag-of-words">
+    <div class="indicators">
+        <div class="card indicator">
+            <div class="indicator-content">
+                <i class="fa-solid fa-earth-americas"></i>
+                <p><span id="indicator-countries" class="indicator-number">0</span></p>
+            </div>
+            <p class="indicator-label">Palabras</p>
+        </div>
+    </div>
+    <div id="treemap-container" style="width: 100%; height: 400px;"></div>
+</section>
 {% endmacro %}
