--- a/api/templates/metadata.html
+++ b/api/templates/metadata.html
@@ -7,21 +7,21 @@
                     <i class="fa-solid fa-earth-americas"></i>
                     <p><span id="indicator-countries" class="indicator-number">0</span></p>
                 </div>
-                <p class="indicator-label">Países</p>
+                <p class="indicator-label">Countries</p>
             </div>
             <div class="card indicator">
                 <div class="indicator-content">
                     <i class="fa-solid fa-building"></i>
                     <p><span id="indicator-universities" class="indicator-number">0</span></p>
                 </div>
-                <p class="indicator-label">Universidades</p>
+                <p class="indicator-label">Universities</p>
             </div>
             <div class="card indicator">
                 <div class="indicator-content">
                     <i class="fa-solid fa-file-lines"></i>
                     <p><span id="indicator-docs" class="indicator-number">0</span></p>
                 </div>
-                <p class="indicator-label">Documentos</p>
+                <p class="indicator-label">Documents</p>
             </div>
             <!--<div class="card indicator">
                 <div class="indicator-content">
@@ -48,7 +48,7 @@
         <i id="scroll-icon" class="fa-solid fa-caret-down"></i>
     </button>
 </section>
-<section class="visualization-container">
+<section id="mapita" class="visualization-container">
     <div id="map" class="map"></div>
 </section>
 {% endmacro %}
